--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,71 @@
-<h1> Hellooooooooo </h1>
-<form action="{{url_for('data_collect')}}" method="post">
-  <input type="email" name="email">
-  <input type="password" name="pass">
-  <input type="submit" value="submit">
-</form>
+<html>
+<head>
+  <title>REVIEW</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</head>
+<style>
+img{
+  height: 50px;
+  width: 50px;
+}
+</style>
+<body>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+      <h1>Logo</h1><br>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <img src="" alt="Bike Image">
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <h4>Get Free Home Delivery</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <img src="" alt="Bike Image">
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <h4>Party Bookings Available</h4>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+      <h1> Customer Feedback </h1><br>
+      <form action="{{url_for('data_collect')}}" method="post">
+        <input type="name" name="name">
+        <input type="email" name="email">
+        <input type="number" name="num">
+        <div><h4>How would you like to Rate Us</h4></div>
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+            <a href=""><img src="static/images/bad.png">
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+            <a href=""><img src="static/images/okay.png">
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+            <a href=""><img src="static/images/good.png">
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+            <a href=""><img src="static/images/love.png">
+          </div>
+        </div>
+        <input type="submit" value="submit">
+      </form>
+    </div>
+  </div>
+</div>
+</body>
+</html>
