--- a/templates/index.html
+++ b/templates/index.html
@@ -11,30 +11,47 @@
   integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <style>
-img{
-  height: 50px;
-  width: 50px;
+html
+{
+  background-color: lightskyblue;
+}
+.emoji{
+  height: 70px;
+  width: 60px;
+}
+.eventimg
+{
+  height: 100px;
+  width: 100px;
+}
+body{
+  margin-top: 40px;
+  color: white;
+}
+.leftside
+{
+  background-color:black;
 }
 </style>
 <body>
-<div class="container-fluid">
+<div class="container-fluid leftside">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <h1>Logo</h1><br>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-            <img src="" alt="Bike Image">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <img src="static/images/delivery4.png" alt="Bike Image" class="eventimg">
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
             <h4>Get Free Home Delivery</h4>
           </div>
-        </div>
+        </div><br>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-            <img src="" alt="Bike Image">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <img src="static/images/partyp.png" alt="Party Image" class="eventimg">
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <h4>Party Bookings Available</h4>
           </div>
         </div>
@@ -43,27 +60,37 @@ img{
     </div>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <h1> Customer Feedback </h1><br>
-      <form action="{{url_for('data_collect')}}" method="post">
-        <input type="name" name="name">
-        <input type="email" name="email">
-        <input type="number" name="num">
-        <div><h4>How would you like to Rate Us</h4></div>
+      <form action="{{url_for('data_collect')}}" method="post" class="form-vertical">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" placeholder="Enter Name">
+        </div>
+          <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label>Contact Number</label>
+            <input class="form-control" type="number" placeholder="Enter number">
+          </div>
+        </form><br>
+        <div><h4>How would you like to Rate Us</h4></div><br>
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-            <a href=""><img src="static/images/bad.png">
+            <a href=""><img src="static/images/bad.png" class="emoji">
           </div>
           <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-            <a href=""><img src="static/images/okay.png">
+            <a href=""><img src="static/images/ok.png" class="emoji">
           </div>
           <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-            <a href=""><img src="static/images/good.png">
+            <a href=""><img src="static/images/fab.png" class="emoji">
           </div>
           <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-            <a href=""><img src="static/images/love.png">
+            <a href=""><img src="static/images/best.png" class="emoji">
           </div>
-        </div>
-        <input type="submit" value="submit">
-      </form>
+        </div><br>
+        <button type="submit" value="submit" class="btn btn-lg btn-danger">Submit</button>
+      </form><br><br>
     </div>
   </div>
 </div>
